[package]
name = "tests"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[dependencies]
anchor-client = "0.30.1"
anchor-spl = "0.30.1"
nfl-blockchain = { version = "0.1.0", path = "../programs/nfl-blockchain" }
solana-program = "1.18.17"
solana-sdk = "1.18.17"
tokio = { version = "1.14.1", features = ["full"] }

# --- ADD THIS LINE ---
spl-associated-token-account = "3"