[package]
name = "nfl-blockchain"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nfl_blockchain"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
# We use 0.30.1 because it is the most stable version for dependency resolution right now
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"